Updated project structure Added log module Replaced shared logic