@@ -1,5 +1,6 @@
 package com.knubisoft.testlum.testing.framework.interpreter;
 
+import com.knubisoft.testlum.log.LogFormat;
 import com.knubisoft.testlum.testing.framework.env.AliasEnv;
 import com.knubisoft.testlum.testing.framework.exception.DefaultFrameworkException;
 import com.knubisoft.testlum.testing.framework.interpreter.lib.AbstractInterpreter;
@@ -30,39 +31,30 @@ import java.util.stream.IntStream;
 
 import static com.knubisoft.testlum.testing.framework.constant.DelimiterConstant.REGEX_MANY_SPACES;
 import static com.knubisoft.testlum.testing.framework.constant.DelimiterConstant.SPACE;
-import static java.lang.String.format;
-import static java.util.Objects.isNull;
-import static java.util.Objects.nonNull;
-import static org.apache.commons.lang3.StringUtils.EMPTY;
-import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
 @Slf4j
 @InterpreterForClass(Rabbit.class)
 public class RabbitMQInterpreter extends AbstractInterpreter<Rabbit> {
 
     //LOGS
-    private static final String TABLE_FORMAT = "%-23s|%-70s";
-    private static final String REGEX_NEW_LINE = "[\\r\\n]";
-    private static final String NEW_LOG_LINE = format("%n%19s| ", EMPTY);
-    private static final String CONTENT_FORMAT = format("%n%19s| %-23s|", EMPTY, EMPTY);
-    private static final String ANSI_RED = "\u001B[31m";
-    private static final String ANSI_CYAN = "\u001b[36m";
-    private static final String ANSI_RESET = "\u001b[0m";
+    private static final String NEW_LOG_LINE = String.format("%n%19s| ", StringUtils.EMPTY);
+    private static final String CONTENT_FORMAT = String.format("%n%19s| %-23s|", StringUtils.EMPTY, StringUtils.EMPTY);
+
     private static final String SEND_ACTION = "send";
     private static final String RECEIVE_ACTION = "receive";
-    private static final String QUEUE_LOG = format(TABLE_FORMAT, "Queue", "{}");
-    private static final String ACTION_LOG = format(TABLE_FORMAT, "Action", "{}");
-    private static final String ALIAS_LOG = format(TABLE_FORMAT, "Alias", "{}");
-    private static final String CONTENT_LOG = format(TABLE_FORMAT, "Content", "{}");
-    private static final String ROUTING_KEY_LOG = format(TABLE_FORMAT, "Routing Key", "{}");
-    private static final String PREFETCH_COUNT_LOG = format(TABLE_FORMAT, "Prefetch Count", "{}");
-    private static final String CORRELATION_ID_LOG = format(TABLE_FORMAT, "Correlation Id", "{}");
-    private static final String TIMEOUT_MILLIS_LOG = format(TABLE_FORMAT, "Timeout Millis", "{}");
-    private static final String COMMAND_LOG = ANSI_CYAN + "------- Command #{} - {} -------" + ANSI_RESET;
-    private static final String EXCEPTION_LOG = ANSI_RED
-            + "----------------    EXCEPTION    -----------------"
+    private static final String QUEUE_LOG = LogFormat.table("Queue");
+    private static final String ACTION_LOG = LogFormat.table("Action");
+    private static final String ALIAS_LOG = LogFormat.table("Alias");
+    private static final String CONTENT_LOG = LogFormat.table("Content");
+    private static final String ROUTING_KEY_LOG = LogFormat.table("Routing Key");
+    private static final String PREFETCH_COUNT_LOG = LogFormat.table("Prefetch Count");
+    private static final String CORRELATION_ID_LOG = LogFormat.table("Correlation Id");
+    private static final String TIMEOUT_MILLIS_LOG = LogFormat.table("Timeout Millis");
+    private static final String COMMAND_LOG = LogFormat.withCyan("------- Command #{} - {} -------");
+    private static final String EXCEPTION_LOG = LogFormat.withRed(
+            "----------------    EXCEPTION    -----------------"
             + NEW_LOG_LINE + "{}" + NEW_LOG_LINE
-            + "--------------------------------------------------" + ANSI_RESET;
+            + "--------------------------------------------------");
 
     //RESULT
     private static final String MESSAGE_TO_SEND = "Message to send";
@@ -171,7 +163,7 @@ public class RabbitMQInterpreter extends AbstractInterpreter<Rabbit> {
     }
 
     private void setHeaders(final SendRmqMessage send, final MessageProperties properties) {
-        if (nonNull(send.getHeaders())) {
+        if (Objects.nonNull(send.getHeaders())) {
             for (RmqHeader rmqHeader : send.getHeaders().getHeader()) {
                 properties.setHeader(rmqHeader.getName(), rmqHeader.getValue());
             }
@@ -204,7 +196,7 @@ public class RabbitMQInterpreter extends AbstractInterpreter<Rabbit> {
 
     private RabbitMQMessage receiveRmqMessage(final ReceiveRmqMessage receive, final AliasEnv aliasEnv) {
         Message actualMessage = rabbitTemplate.get(aliasEnv).receive(receive.getQueue(), receive.getTimeoutMillis());
-        if (isNull(actualMessage)) {
+        if (Objects.isNull(actualMessage)) {
             return null;
         }
         return convertToRMQMessage(actualMessage, receive);
@@ -245,7 +237,7 @@ public class RabbitMQInterpreter extends AbstractInterpreter<Rabbit> {
     }
 
     private void checkQueueExistence(final String queue, final AliasEnv aliasEnv) {
-        if (isNull(amqpAdmin.get(aliasEnv).getQueueProperties(queue))) {
+        if (Objects.isNull(amqpAdmin.get(aliasEnv).getQueueProperties(queue))) {
             throw new DefaultFrameworkException(QUEUE_DOES_NOT_EXIST, queue);
         }
     }
@@ -269,18 +261,18 @@ public class RabbitMQInterpreter extends AbstractInterpreter<Rabbit> {
         log.info(ACTION_LOG, action.toUpperCase(Locale.ROOT));
         log.info(topicOrRoutingKeyOrQueue, topicOrRoutingKeyOrQueueValue);
         log.info(CONTENT_LOG, StringPrettifier.asJsonResult(content.replaceAll(REGEX_MANY_SPACES, SPACE))
-                .replaceAll(REGEX_NEW_LINE, CONTENT_FORMAT));
+                .replaceAll(LogFormat.newLine(), CONTENT_FORMAT));
     }
 
     private void logIfNotNull(final String title, final Object data) {
-        if (nonNull(data)) {
+        if (Objects.nonNull(data)) {
             log.info(title, data);
         }
     }
 
     private void logException(final Exception ex) {
-        if (isNotBlank(ex.getMessage())) {
-            log.error(EXCEPTION_LOG, ex.getMessage().replaceAll(REGEX_NEW_LINE, NEW_LOG_LINE));
+        if (StringUtils.isNotBlank(ex.getMessage())) {
+            log.error(EXCEPTION_LOG, ex.getMessage().replaceAll(LogFormat.newLine(), NEW_LOG_LINE));
         } else {
             log.error(EXCEPTION_LOG, ex.toString());
         }
@@ -291,7 +283,7 @@ public class RabbitMQInterpreter extends AbstractInterpreter<Rabbit> {
         CommandResult commandResult = new CommandResult();
         commandResult.setId(number);
         commandResult.setSuccess(true);
-        if (nonNull(command) && command.length > 0) {
+        if (Objects.nonNull(command) && command.length > 0) {
             commandResult.setCommandKey(command[0].getClass().getSimpleName());
         }
         return commandResult;
@@ -311,15 +303,15 @@ public class RabbitMQInterpreter extends AbstractInterpreter<Rabbit> {
         String exchange = sendAction.getExchange();
         String correlationId = sendAction.getCorrelationId();
         RmqHeaders rabbitHeaders = sendAction.getHeaders();
-        if (isNotBlank(exchange)) {
+        if (StringUtils.isNotBlank(exchange)) {
             result.put(EXCHANGE, exchange);
         }
-        if (isNotBlank(correlationId)) {
+        if (StringUtils.isNotBlank(correlationId)) {
             result.put(CORRELATION_ID, correlationId);
         }
-        if (nonNull(rabbitHeaders)) {
+        if (Objects.nonNull(rabbitHeaders)) {
             result.put(ADDITIONAL_HEADERS, rabbitHeaders.getHeader().stream().map(header ->
-                    format(HEADER_TEMPLATE, header.getName(), header.getValue())).collect(Collectors.toList()));
+                    String.format(HEADER_TEMPLATE, header.getName(), header.getValue())).toList());
         }
     }
 
